Added mongoose tutorial

--- a/www/blog/2022-05-29.md
+++ b/www/blog/2022-05-29.md
@@ -2,27 +2,69 @@
 slug: practices-full-stack-react
 title: "#28: Full-Stack App: React + SWA + Mongoose + CosmosDB"
 authors: [christopher]
-tags: [swa, 30days, best-practices]
+tags: [swa, 30days, best-practices, react, mongoose]
 draft: true 
 ---
 
-Welcome to `Week 4, Day 7` of **#30DaysOfSWA**!! 
+Welcome to `Week 4, Day 7` of **#30DaysOfSWA**!!
 
-We're at the last post of the series, so let's close the loop to where we started on Day 1. We started by talking about End-to-End Developer Experiences built on Azure Static Web Apps - and continued with a series of posts exploring various Azure service integrations that showcase this vision.
+We're at the last post of the series, so let's close the loop to where we started on Day 1. We started by talking about End-to-End Developer Experiences built on Azure Static Web Apps - and continued with a series of posts exploring various Azure service integrations that showcase this vision. Wouldn't it be great if you could have one end-to-end development example that you could use as a **starter** for your next prototype? Let's end this week with the perfect example. Today we'll look at an end-to-end developer workflow for a full-stack app:
 
-Wouldn't it be great if you could have one end-to-end development example that you could use as a **starter** for your next prototype? Let's end this week with the perfect example. Today we'll look at an end-to-end developer workflow for a full-stack app:
- * Front-end built with React
- * Back-end built with Azure Functions
- * Deployed using Azure Static Web Apps
- * With a MongoDB database 
- * Accessed using Mongoose via CosmosDB API.
- * (Optionally, with Playwright testing)
+- Front-end built with [React](https://reactjs.org/) and [Redux Toolkit](https://redux-toolkit.js.org/)
+- Back-end built with [Azure Functions](https://docs.microsoft.com/azure/static-web-apps/add-api?tabs=vanilla-javascript)
+- Deployed to the cloud with Azure Static Web Apps
+- With a [MongoDB database hosted in Cosmos DB](https://docs.microsoft.com/azure/cosmos-db/mongodb/mongodb-introduction), accessed using [Mongoose]
+- (Optionally, with Playwright testing)
 
 ## What We'll Cover
- * 
- * 
- * 
- * **Exercise** 
- * **Resource(s):** 
+
+- Why use Mongoose?
+- Why use Redux Toolkit?
+- **Build**: Implement and deploy the React/Mongoose template
+- **Exercise**: Add your own features
+- **Resources**
+
+## Why use Mongoose?
+
+When accessing a data store you can either use APIs to interact directly with the backend or use a library which can provide additional functionality. Many developers prefer to use a library as it allows them to focus more on creating their code and logic while offloading some of the work. Mongoose is just such a library.
+
+[Mongoose](https://mongoosejs.com/) is an Object-Database-Mapper (ODM) which allows you to define the objects you need to store in a NoSQL database. Mongoose can be used with any database which supports MongoDB APIs, which [Cosmos DB does](https://docs.microsoft.com/azure/cosmos-db/mongodb/mongodb-introduction). With Mongoose you can create schemas for your data, enforce validation, and streamline the process of interacting with your data.
+
+## Why use Redux Toolkit?
+
+[Redux](https://redux.js.org/) is the most popular tool for managing state in a [React](https://reactjs.org/) application. [Redux Toolkit](https://redux-toolkit.js.org/) helps create projects which use Redux by providing an additional framework for some of the most common tasks when using Redux. Redux Toolkit includes functions to streamline the process of creating reducers and updating and accessing state.
+
+## Build: Implement and deploy the React/Mongoose template
+
+To help jump start your development process, a [template has been built](https://github.com/staticwebdev/mongoose-starter) built on the following libraries and tools:
+
+- React
+- Redux Toolkit
+- Mongoose
+- [Node-config](https://github.com/node-config/node-config#readme)
+- SWA CLI
+
+The template is a todo application and contains models for items and lists (which contain the items). It [GitHub authentication through Azure Static Web Apps](https://docs.microsoft.com/azure/static-web-apps/authentication-authorization?tabs=invitations). To support local development, a `devcontainer.json` file is included [use a dev container](https://code.visualstudio.com/docs/remote/containers).
+
+The **[tutorial on docs for using the template](https://docs.microsoft.com/azure/static-web-apps/add-mongoose)** will walk you through the steps to:
+
+- create the Cosmos DB server
+- create a new repository from the template
+- create the Azure Static Web App
+- configure the Azure Static Web App
+- use the site
+
+## Exercise: Add your own features
+
+The template is designed to be used as the starter for your own projects. To build upon what you've learned, you could explore expanding the functionality by adding your own features. Clone the repository you created and begin writing your own code! This could include allowing items to be labeled, implementing archive functionality, or potentially incorporating [artificial intelligence to detect the sentiment of tasks](https://docs.microsoft.com/azure/cognitive-services/language-service/sentiment-opinion-mining/quickstart?pivots=programming-language-javascript).
+
+## Resources
+
+Here is a collection of resources you may find helpful for digging more into creating applications hosted on Azure Static Web Apps:
+
+- SWA Quickstart: [Using Azure CLI](https://docs.microsoft.com/azure/static-web-apps/get-started-cli?tabs=react)
+- [Official Tutorial: Intro to React](https://reactjs.org/tutorial/tutorial.html)
+- [Creating your first web apps with React](https://docs.microsoft.com/learn/paths/react/) - on Microsoft Learn
+- [Web Dev For Beginners](https://github.com/microsoft/Web-Dev-For-Beginners) - project-based curriculum
 
 ![](../static/img/series/banner.png)
