Week 4, Day 6 => Reviewed

--- a/www/blog/2022-05-28.md
+++ b/www/blog/2022-05-28.md
@@ -3,7 +3,7 @@ slug: practices-cosmosdb
 title: "#27: Video Conf with ACS & SWA"
 authors: [david]
 tags: [swa, 30days, best-practices]
-draft: true 
+draft: false
 ---
 
 Welcome to `Week 4, Day 6` of **#30DaysOfSWA**!! 
@@ -20,7 +20,7 @@ In an earlier example this week, we looked at a real-world case study with KlipT
  * A Static Web App - hosting a Metaverse? 🤯
  * **Exercise** Deploy the sample yourself following the step-by-step tutorial
 
-![](../static/img/series/banner.png)
+![](../static/img/series/27-banner.png)
 
 ## What is Azure Communications Services (ACS)?
 
