--- a/www/blog/2022-05-29.md
+++ b/www/blog/2022-05-29.md
@@ -1,6 +1,6 @@
 ---
 slug: practices-full-stack-react
-title: "#28: Full-Stack App: React + SWA + Mongoose + CosmosDB"
+title: "#28: Full-Stack SWA: React + Mongoose"
 authors: [christopher]
 tags: [swa, 30days, best-practices, react, mongoose]
 draft: true 
@@ -12,8 +12,8 @@ We're at the last post of the series, so let's close the loop to where we starte
 
 - Front-end built with [React](https://reactjs.org/) and [Redux Toolkit](https://redux-toolkit.js.org/)
 - Back-end built with [Azure Functions](https://docs.microsoft.com/azure/static-web-apps/add-api?tabs=vanilla-javascript)
-- Deployed to the cloud with Azure Static Web Apps
-- With a [MongoDB database hosted in Cosmos DB](https://docs.microsoft.com/azure/cosmos-db/mongodb/mongodb-introduction), accessed using [Mongoose]
+- Deployed to the cloud with [Azure Static Web Apps](https://docs.microsoft.com/en-us/azure/static-web-apps/)
+- With a [MongoDB database hosted in Cosmos DB](https://docs.microsoft.com/azure/cosmos-db/mongodb/mongodb-introduction), accessed using [Mongoose](https://mongoosejs.com/)
 - (Optionally, with Playwright testing)
 
 ## What We'll Cover
@@ -23,6 +23,8 @@ We're at the last post of the series, so let's close the loop to where we starte
 - **Build**: Implement and deploy the React/Mongoose template
 - **Exercise**: Add your own features
 - **Resources**
+
+![](../static/img/series/banner.png)
 
 ## Why use Mongoose?
 
@@ -67,4 +69,3 @@ Here is a collection of resources you may find helpful for digging more into cre
 - [Creating your first web apps with React](https://docs.microsoft.com/learn/paths/react/) - on Microsoft Learn
 - [Web Dev For Beginners](https://github.com/microsoft/Web-Dev-For-Beginners) - project-based curriculum
 
-![](../static/img/series/banner.png)
