Added Twitter Card

--- a/www/blog/2022-05-28.md
+++ b/www/blog/2022-05-28.md
@@ -6,6 +6,17 @@ tags: [swa, 30days, best-practices]
 draft: false
 ---
 
+<head>
+  <meta name="twitter:url" content="https://www.azurestaticwebapps.dev/blog/practices-cosmosdb" />
+  <meta name="twitter:title" content="#27: Video Conferencing with ACS & SWA" />
+  <meta name="twitter:description" content="Join @davrous on #30DaysOfSWA as builds an auth workflow for video conferencing with @AzureStatic Apps @AzureFunctions @AzureCosmosDB & Azure Communications Services!" />
+  <meta name="twitter:image" content="https://www.azurestaticwebapps.dev/assets/images/27-banner.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:creator" content="@nitya" />
+  <meta name="twitter:site" content="@AzureStaticApps" /> 
+  <link rel="canonical" href="https://www.azurestaticwebapps.dev/blog/practices-cosmosdb" />
+</head>
+
 Welcome to `Week 4, Day 6` of **#30DaysOfSWA**!! 
 
 In an earlier example this week, we looked at a real-world case study with KlipTok, involving Azure Static Web Apps integration with _multiple_ backend services, to deliver the desired user experience. Today we look at another great example of an end-to-end development workflow that involves multiple service integrations - this time with a focus on deliver a rich video conferencing web application experience. Let's learn how to build this with **a workflow that involves Azure Static Web Apps, Azure Functions, Azure CosmosDB - and Azure Communications Services (ACS)**.
