--- a/www/blog/2022-05-29.md
+++ b/www/blog/2022-05-29.md
@@ -8,7 +8,7 @@ draft: false
 
 <head>
   <meta name="twitter:url" content="https://www.azurestaticwebapps.dev/blog/practices-full-stack-react" />
-  <meta name="twitter:title" content="#27: Video Conferencing with ACS & SWA" />
+  <meta name="twitter:title" content="#28: Full-Stack SWA with React + Mongoose" />
   <meta name="twitter:description" content="Join @GeekTrainer on #30DaysOfSWA as he builds a full-stack @Reactjs app with @AzureStatic Apps @AzureFunctions @AzureCosmosDB & @mongoosejs !" />
   <meta name="twitter:image" content="https://www.azurestaticwebapps.dev/assets/images/28-banner.png" />
   <meta name="twitter:card" content="summary_large_image" />
