Recap Post => Prepped

--- a/www/blog/2022-05-30.md
+++ b/www/blog/2022-05-30.md
@@ -1,22 +1,59 @@
 ---
 slug: 30days-summary
 title: "#29: The Road Behind!"
-authors: []
+authors: [reshmi, nitya]
 tags: [swa, 30days]
 draft: true 
 ---
 
-
-Welcome to `Day 30` of **#30DaysOfSWA**!! 
-
-It's Time To Wrap up! 
+Welcome to the penulatimate day of the #30DaysOfSWA!! You made it!! Thank you for staying with us throughout May, as we embarked on a journey to learn about Azure Static Web Apps from Core Concepts to Best Practices. Today, we'll do a quick recap of the series, focusing on what was covered in each themed week.
 
 
 ## What We'll Cover
- * 
- * 
- * 
- * **Exercise** 
- * **Resource(s):** 
+ * Anniversary Highlights
+ * Week 1: Core Concepts
+ * Week 2: Usage Examples
+ * Week 3: Developer Tools
+ * Week 4: Best Practices
+ * Our Amazing Contributors!
+ * What's Next
 
-![](../static/img/series/banner.png)
+---
+
+## Anniversary Highlights
+
+![](../static/img/swanniversary.png)
+
+---
+
+## Week 1: Core Concepts
+
+![Banner with people](../static/img/series/week1-roadmap.png)
+
+---
+
+## Week 2: Usage Examples
+
+![Banner with people](../static/img/series/week2-roadmap.png)
+
+---
+
+## Week 3: Developer Tools
+
+![Banner with people](../static/img/series/week3-roadmap.png)
+
+---
+
+## Week 4: Best Practices
+
+![Banner with people](../static/img/series/week4-roadmap.png)
+
+---
+
+## Our Amazing Contributors
+
+![Banner with people](../static/img/series/series-people.png)
+
+---
+
+## Next Steps
