Added 4 weeks + anniversary
Need to add some missing links and 2 more sections - Contributors and Next Steps.

--- a/www/blog/2022-05-30.md
+++ b/www/blog/2022-05-30.md
@@ -1,16 +1,16 @@
 ---
 slug: 30days-summary
-title: "#29: The Road Behind!"
+title: "#29: The Road Behind (and Ahead!)"
 authors: [reshmi, nitya]
 tags: [swa, 30days]
 draft: true 
 ---
 
-Welcome to the penulatimate day of the #30DaysOfSWA!! You made it!! Thank you for staying with us throughout May, as we embarked on a journey to learn about Azure Static Web Apps from Core Concepts to Best Practices. Today, we'll do a quick recap of the series, focusing on what was covered in each themed week.
+Welcome to the penultimate day of the #30DaysOfSWA!! You made it!! Thank you for staying with us throughout May, as we embarked on a journey to learn about Azure Static Web Apps from Core Concepts to Best Practices. Today, we'll do a quick recap of the series, focusing on what was covered in each themed week.
 
 
 ## What We'll Cover
- * Anniversary Highlights
+ * SWA Anniversary Highlights
  * Week 1: Core Concepts
  * Week 2: Usage Examples
  * Week 3: Developer Tools
@@ -20,9 +20,13 @@ Welcome to the penulatimate day of the #30DaysOfSWA!! You made it!! Thank you fo
 
 ---
 
-## Anniversary Highlights
+## First Stop - SWA Anniversary Highlights
 
 ![](../static/img/swanniversary.png)
+We recently celebrated the [#SWAanniversary](https://www.azurestaticwebapps.dev/blog/swanniversary?WT.mc_id=30daysofswa-61155-cxall) on 19th and 20th May to commemorate a year of Static Web App's **General Availability**! A fun-filled activity featuring **top community speakers, launch of [General Availability of SWA CLI](https://aka.ms/swa-cli-ga?WT.mc_id=30daysofswa-61155-cxall), and many more feature demos!**🚀 
+
+
+If you happened to miss the live stream, worry not! You can watch (_and re-watch_) the on-demand recordings of the event [here.](https://aka.ms/swaanniversary-ondemand?WT.mc_id=30daysofswa-61155-cxall)
 
 ---
 
@@ -30,11 +34,26 @@ Welcome to the penulatimate day of the #30DaysOfSWA!! You made it!! Thank you fo
 
 ![Banner with people](../static/img/series/week1-roadmap.png)
 
+Week 1 was the foundational week, focusing on what Azure Static Web Apps is, how to build, deploy, preview, customize APIs etc. This is where a Static Web App newbie earns the title of a **"Successful SWA voyager"**! Every blog comes with a cute little exercise at the bottom which gives a compact hands-on experience of using Static Web Apps 😄 
+
+
+**The best part?** Every blog has a visual narrative of what we cover, and some of them also feature video lessons! Do give us a shoutout if you (_like me_) are a firm believer of visual learning!❤️ 
+
+
+To revisit Week 1, or start afresh even - [click here.](https://www.azurestaticwebapps.dev/blog/tags/core-concepts?WT.mc_id=30daysofswa-61155-cxall)🚀
+
+@@@@@@@@ ##NITYA - if you can make the above link point specifically to the first blog per week, it'd be great! TIA! <3 @@@@@@@@@@@@@@@@@@@@@@@
+
 ---
 
 ## Week 2: Usage Examples
 
 ![Banner with people](../static/img/series/week2-roadmap.png)
+
+In Week 2, we saw a plethora of examples ranging across frameworks and languages! The creators of these mind-blowing examples come forward to teach how we can easily replicate these on our end too! Afterall, what better way to learn than to get your hands dirty playing with them 😉
+
+
+Haven't tried them yet? Go for it **right away** [here](https://www.azurestaticwebapps.dev/blog/tags/usage-examples?WT.mc_id=30daysofswa-61155-cxall)!!!
 
 ---
 
@@ -42,11 +61,27 @@ Welcome to the penulatimate day of the #30DaysOfSWA!! You made it!! Thank you fo
 
 ![Banner with people](../static/img/series/week3-roadmap.png)
 
+Week 3 focused on all the partner tools and platforms available in the Azure ecosphere which can empower your Static Web Apps to achieve **more**! Be it VSCode, Playwright, or Egde DevTools - we got you covered! As a bonus, we also talk about the enhanced dX for Azure DevOps🌟 
+
+
+Here's where you can check out Week 3 and the Dev Tool [blogs](https://www.azurestaticwebapps.dev/blog/tags/dev-tools?WT.mc_id=30daysofswa-61155-cxall).
+
+
+In Week 3, we also witnessed a big announcement - **the GA of SWA CLI**!! I know we had discussed earlier about revisiting our exercises with SWA CLI, right? Well, the time has come!! Try out the [SWA CLI](https://aka.ms/swa-cli-ga?WT.mc_id=30daysofswa-61155-cxall), deploy your amazing Static Web Apps, and tell us about your experience!🌹
+
 ---
 
 ## Week 4: Best Practices
 
 ![Banner with people](../static/img/series/week4-roadmap.png)
+
+And the final stop, Week 4! This week was dedicated to the Best practices to ensure a seamless end-to-end dX while using Static Web Apps, enhanced services such as BYOFunctions, Cognitive search, Azure Vision, Communication Services, etc. and also hear from a real-life example on how the experience of SWA made their application journey smooth and simple 😄
+
+
+All the Week 4 blogs can be found [here](NEED TO ADD A LINK!!).
+
+
+_This was a long but fun journey, eh?_ **Tell us about your SWA learning experience using #30DaysOfSWA!** 😉
 
 ---
 
