--- a/www/blog/2022-05-30.md
+++ b/www/blog/2022-05-30.md
@@ -1,15 +1,17 @@
 ---
 slug: 30days-summary
-title: "#29: The Road Behind (and Ahead!)"
+title: "#29: Looking Back (Recap)"
 authors: [reshmi, nitya]
 tags: [swa, 30days]
-draft: true 
+draft: false
 ---
 
-Welcome to the penultimate day of the #30DaysOfSWA!! You made it!! Thank you for staying with us throughout May, as we embarked on a journey to learn about Azure Static Web Apps from Core Concepts to Best Practices. Today, we'll do a quick recap of the series, focusing on what was covered in each themed week.
+Welcome to the penultimate day of the #30DaysOfSWA!! 
+
+You made it!! Thank you for staying with us throughout May, as we embarked on a journey to learn about Azure Static Web Apps from Core Concepts to Best Practices. Today, we'll **look back** and recap the series highlighting the key themes and topics covered in this journey. Then join us tomorrow for a **look ahead** to what's next.
 
 
-## What We'll Cover
+## Series Retrosepective
  * SWA Anniversary Highlights
  * Week 1: Core Concepts
  * Week 2: Usage Examples
@@ -18,15 +20,24 @@ Welcome to the penultimate day of the #30DaysOfSWA!! You made it!! Thank you for
  * Our Amazing Contributors!
  * What's Next
 
+We started this site on Apr 30 with [this post](./2022-04-30.md) announcing the **SWA Anniversary** event, before [kicking off](./2022-05-01.md) the **#30DaysOfSWA** on May 1, then completing four themed weeks of content, leading us to this post today. Let's take a look at some highlights.
+
 ---
 
-## First Stop - SWA Anniversary Highlights
+## First Stop - SWA Anniversary Event
 
-![](../static/img/swanniversary.png)
-We recently celebrated the [#SWAanniversary](https://www.azurestaticwebapps.dev/blog/swanniversary?WT.mc_id=30daysofswa-61155-cxall) on 19th and 20th May to commemorate a year of Static Web App's **General Availability**! A fun-filled activity featuring **top community speakers, launch of [General Availability of SWA CLI](https://aka.ms/swa-cli-ga?WT.mc_id=30daysofswa-61155-cxall), and many more feature demos!**🚀 
+We recently celebrated the [#SWAanniversary](https://www.azurestaticwebapps.dev/blog/swanniversary?WT.mc_id=30daysofswa-61155-cxall) on 19th and 20th May to commemorate a year of Static Web App's **General Availability**! 
+
+It was a fun-filled event featuring **top community speakers** and many more feature demos! Plus, it marked the [General Availability of SWA CLI](https://aka.ms/swa-cli-ga?WT.mc_id=30daysofswa-61155-cxall)🚀 - watch the video to learn more about how this CLI streamlines your workflow from `init` to `deploy`.
+
+<iframe src="https://learn-video.azurefd.net/vod/player?ev=swa-anniversary-may-2022&session=explore-static-web-apps-cli"  width="600" height="400"  frameborder="0"  allowfullscreen></iframe>
 
 
-If you happened to miss the live stream, worry not! You can watch (_and re-watch_) the on-demand recordings of the event [here.](https://aka.ms/swaanniversary-ondemand?WT.mc_id=30daysofswa-61155-cxall)
+If you happened to miss the live stream, worry not! You can watch (_and re-watch_) the [**on-demand recordings of the event**](https://aka.ms/swaanniversary-ondemand?WT.mc_id=30daysofswa-61155-cxall) to catch up on key talks including:
+ * [How Static Web Apps saved (me) time and money](https://docs.microsoft.com/en-us/events/swa-anniversary-may-2022/how-static-web-apps-saved-scott-hanselman-time-and-money/) - Scott Hanselman
+ * [SWA Case Study: ohmyposh.dev ](https://docs.microsoft.com/en-us/events/swa-anniversary-may-2022/azure-static-web-apps-for-your-cli-oh-my-posh/)- Jan de Dobbeleer
+ * [Hybrid Rendering with Zero Config - Nuxt ♥️ SWA](https://docs.microsoft.com/en-us/events/swa-anniversary-may-2022/hybrid-rendering-with-zero-config-nuxt-3-azure-swa/) - Daniel Roe & Anthony Chu
+ * [How I Created My Brand with SWA and..](https://docs.microsoft.com/en-us/events/swa-anniversary-may-2022/how-i-created-my-brand-using-static-web-apps-with-blazor-and-azure-functions/) - Stacey Cashmore & Frank Boucher
 
 ---
 
@@ -34,15 +45,13 @@ If you happened to miss the live stream, worry not! You can watch (_and re-watch
 
 ![Banner with people](../static/img/series/week1-roadmap.png)
 
-Week 1 was the foundational week, focusing on what Azure Static Web Apps is, how to build, deploy, preview, customize APIs etc. This is where a Static Web App newbie earns the title of a **"Successful SWA voyager"**! Every blog comes with a cute little exercise at the bottom which gives a compact hands-on experience of using Static Web Apps 😄 
+`Week 1` was the foundational week, focusing on what Azure Static Web Apps is, how to build, deploy, preview, customize APIs etc. This is where a Static Web App newbie earns the title of a **"Successful SWA voyager"**! Every blog comes with a cute little exercise at the bottom which gives a compact hands-on experience of using Static Web Apps 😄 
 
 
 **The best part?** Every blog has a visual narrative of what we cover, and some of them also feature video lessons! Do give us a shoutout if you (_like me_) are a firm believer of visual learning!❤️ 
 
 
-To revisit Week 1, or start afresh even - [click here.](https://www.azurestaticwebapps.dev/blog/tags/core-concepts?WT.mc_id=30daysofswa-61155-cxall)🚀
-
-@@@@@@@@ ##NITYA - if you can make the above link point specifically to the first blog per week, it'd be great! TIA! <3 @@@@@@@@@@@@@@@@@@@@@@@
+To revisit Week 1, or start afresh - **[click here.](/roadmap#core-concepts)** 🚀
 
 ---
 
@@ -50,10 +59,10 @@ To revisit Week 1, or start afresh even - [click here.](https://www.azurestaticw
 
 ![Banner with people](../static/img/series/week2-roadmap.png)
 
-In Week 2, we saw a plethora of examples ranging across frameworks and languages! The creators of these mind-blowing examples come forward to teach how we can easily replicate these on our end too! Afterall, what better way to learn than to get your hands dirty playing with them 😉
+`Week 2` showcased a plethora of examples, from diverse front-end frameworks to popular static site generators and languages! The creators of these mind-blowing examples came forward to teach how we can easily replicate these on our end too! After all, what better way to learn than to get your hands dirty playing with them 😉
 
 
-Haven't tried them yet? Go for it **right away** [here](https://www.azurestaticwebapps.dev/blog/tags/usage-examples?WT.mc_id=30daysofswa-61155-cxall)!!!
+Haven't tried them yet? Go for it [**right away**](/roadmap#usage-examples)!!! 👩🏽‍💻
 
 ---
 
@@ -61,13 +70,13 @@ Haven't tried them yet? Go for it **right away** [here](https://www.azurestaticw
 
 ![Banner with people](../static/img/series/week3-roadmap.png)
 
-Week 3 focused on all the partner tools and platforms available in the Azure ecosphere which can empower your Static Web Apps to achieve **more**! Be it VSCode, Playwright, or Egde DevTools - we got you covered! As a bonus, we also talk about the enhanced dX for Azure DevOps🌟 
+`Week 3` focused on all the partner tools and platforms available in the Azure ecosystem, which can empower your Static Web Apps to achieve **more**! Be it VSCode, Playwright, or Egde DevTools - we got you covered! As a bonus, we also talk about the enhanced DX (developer experience) for Azure DevOps🌟 
 
+:::success ANNOUNCEMENT: SWA CLI V1.0 RELEASED! 
+In Week 3, we also witnessed a big announcement - **the General Availability (GA) release of SWA CLI**!! I know we had discussed earlier about revisiting our exercises with SWA CLI, right? Well, the time has come!! Try out the [SWA CLI](https://aka.ms/swa-cli-ga?WT.mc_id=30daysofswa-61155-cxall), deploy your amazing Static Web Apps, and tell us about your experience!🌹
+:::
 
-Here's where you can check out Week 3 and the Dev Tool [blogs](https://www.azurestaticwebapps.dev/blog/tags/dev-tools?WT.mc_id=30daysofswa-61155-cxall).
-
-
-In Week 3, we also witnessed a big announcement - **the GA of SWA CLI**!! I know we had discussed earlier about revisiting our exercises with SWA CLI, right? Well, the time has come!! Try out the [SWA CLI](https://aka.ms/swa-cli-ga?WT.mc_id=30daysofswa-61155-cxall), deploy your amazing Static Web Apps, and tell us about your experience!🌹
+Go ahead and familiarize yourself with these [dev-tools](/roadmap#developer-tools). 🧰
 
 ---
 
@@ -75,10 +84,9 @@ In Week 3, we also witnessed a big announcement - **the GA of SWA CLI**!! I know
 
 ![Banner with people](../static/img/series/week4-roadmap.png)
 
-And the final stop, Week 4! This week was dedicated to the Best practices to ensure a seamless end-to-end dX while using Static Web Apps, enhanced services such as BYOFunctions, Cognitive search, Azure Vision, Communication Services, etc. and also hear from a real-life example on how the experience of SWA made their application journey smooth and simple 😄
+`Week 4` marks the final phase of our journey! This week was dedicated to the Best practices to ensure a seamless end-to-end dX (developer experience) while using Static Web Apps. Explore enhanced services such as BYOFunctions, Cognitive search, Azure Vision, Communication Services, etc. and learn from a real-life case study on how Static Web Apps helped deliver an effective and scalable solution for [KlipTok](https://kliptok.com), allowing the developer to seamlessly integrate additional Azure services to meet challenges and deliver a richer user experience. 😄
 
-
-All the Week 4 blogs can be found [here](NEED TO ADD A LINK!!).
+Explore the various integrations and best practices articles [here](/roadmap#best-practices)
 
 
 _This was a long but fun journey, eh?_ **Tell us about your SWA learning experience using #30DaysOfSWA!** 😉
@@ -87,8 +95,27 @@ _This was a long but fun journey, eh?_ **Tell us about your SWA learning experie
 
 ## Our Amazing Contributors
 
-![Banner with people](../static/img/series/series-people.png)
+![Banner with people](../static/img/series/29-banner.png)
+
+A series of this magnitude would not be possible without the support, time and efforts a number of people. This includes our amazing authors (listed  [here, in our kickoff post](/kickoff#meet-the-authors)). Check out the tweet below to find them on Twitter, or [**follow the series on dev.to**](https://dev.to/nitya/series/17901) to find their profiles on that platform.
+
+:::info AUTHORS ON TWITTER
+
+The tweet below has the Twitter profiles of the many authors who contributed to this series. Liked an article they wrote? Let them know - and follow them for more tech updates and content! 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Thank you <a href="https://twitter.com/simona_cotin?ref_src=twsrc%5Etfw">@simona_cotin</a> <a href="https://twitter.com/glaucia_lemos86?ref_src=twsrc%5Etfw">@glaucia_lemos86</a> <a href="https://twitter.com/nthonyChu?ref_src=twsrc%5Etfw">@nthonyChu</a> <a href="https://twitter.com/KarmarkarMitali?ref_src=twsrc%5Etfw">@KarmarkarMitali</a> <a href="https://twitter.com/chris_noring?ref_src=twsrc%5Etfw">@chris_noring</a> <a href="https://twitter.com/jenlooper?ref_src=twsrc%5Etfw">@jenlooper</a> <a href="https://twitter.com/justinchronicle?ref_src=twsrc%5Etfw">@justinchronicle</a> <a href="https://twitter.com/csharpfritz?ref_src=twsrc%5Etfw">@csharpfritz</a> <a href="https://twitter.com/webmaxru?ref_src=twsrc%5Etfw">@webmaxru</a> <a href="https://twitter.com/debs_obrien?ref_src=twsrc%5Etfw">@debs_obrien</a> <a href="https://twitter.com/patrickbrosset?ref_src=twsrc%5Etfw">@patrickbrosset</a> <a href="https://twitter.com/sinedied?ref_src=twsrc%5Etfw">@sinedied</a> <a href="https://twitter.com/manekinekko?ref_src=twsrc%5Etfw">@manekinekko</a> <a href="https://twitter.com/alexweininger?ref_src=twsrc%5Etfw">@alexweininger</a> <a href="https://twitter.com/AnfibiaCreativa?ref_src=twsrc%5Etfw">@AnfibiaCreativa</a> <a href="https://twitter.com/dfberry?ref_src=twsrc%5Etfw">@dfberry</a> <a href="https://twitter.com/AysSomething?ref_src=twsrc%5Etfw">@AysSomething</a> <a href="https://twitter.com/craigshoemaker?ref_src=twsrc%5Etfw">@craigshoemaker</a> <a href="https://twitter.com/davrous?ref_src=twsrc%5Etfw">@davrous</a> <a href="https://twitter.com/GeekTrainer?ref_src=twsrc%5Etfw">@GeekTrainer</a>🙏🏽</p>&mdash; Nitya Narasimhan (@nitya) <a href="https://twitter.com/nitya/status/1531100046275620866?ref_src=twsrc%5Etfw">May 30, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+:::
 
 ---
 
 ## Next Steps
+
+This gave you a curated tour of Azure Static Web Apps in daily bites of content. Now it's your turn to take the journey forward. Join us tomorrow to learn about three key actions you can take to continue skilling up:
+ * **Learn**: We'll share key documentation and tutorial links to skill up!
+ * **Share**: Let's talk about the {where, what, how} of sharing your insights!
+ * **Contribute**: Built a cool sample or real-world app? Showcase it to inspire others!
+
+And thank you for staying the course with us!
+
+
+---
