Fix broken link

--- a/www/blog/2022-05-30.md
+++ b/www/blog/2022-05-30.md
@@ -97,7 +97,7 @@ _This was a long but fun journey, eh?_ **Tell us about your SWA learning experie
 
 ![Banner with people](../static/img/series/29-banner.png)
 
-A series of this magnitude would not be possible without the support, time and efforts a number of people. This includes our amazing authors (listed  [here, in our kickoff post](/kickoff#meet-the-authors)). Check out the tweet below to find them on Twitter, or [**follow the series on dev.to**](https://dev.to/nitya/series/17901) to find their profiles on that platform.
+A series of this magnitude would not be possible without the support, time and efforts a number of people. This includes our amazing authors (listed  [here, in our kickoff post](/blog/kickoff#meet-the-authors). Check out the tweet below to find them on Twitter, or [**follow the series on dev.to**](https://dev.to/nitya/series/17901) to find their profiles on that platform.
 
 :::info AUTHORS ON TWITTER
 
