--- a/www/blog/2022-05-30.md
+++ b/www/blog/2022-05-30.md
@@ -1,17 +1,17 @@
 ---
 slug: 30days-summary
-title: "#29: Looking Back (Recap)"
+title: "#29: Learn in #30Days"
 authors: [reshmi, nitya]
 tags: [swa, 30days]
 draft: false
 ---
 
-Welcome to the penultimate day of the #30DaysOfSWA!! 
+You made it!!
 
-You made it!! Thank you for staying with us throughout May, as we embarked on a journey to learn about Azure Static Web Apps from Core Concepts to Best Practices. Today, we'll **look back** and recap the series highlighting the key themes and topics covered in this journey. Then join us tomorrow for a **look ahead** to what's next.
+Thank you for staying with us throughout May, as we embarked on a journey to learn about Azure Static Web Apps from Core Concepts to Best Practices in just four weeks! The content is structured in a way that allows you to jumpstart or revisit the journey at any time! So let's recap what we covered and what you'll learn by taking this journey with us!! And stay tuned for a follow-up post a little later, where we'll share resources and next steps you can take, to keep skilling up.
 
 
-## Series Retrosepective
+## #30DaysOfSWA Journey
  * SWA Anniversary Highlights
  * Week 1: Core Concepts
  * Week 2: Usage Examples
@@ -20,7 +20,9 @@ You made it!! Thank you for staying with us throughout May, as we embarked on a 
  * Our Amazing Contributors!
  * What's Next
 
-We started this site on Apr 30 with [this post](./2022-04-30.md) announcing the **SWA Anniversary** event, before [kicking off](./2022-05-01.md) the **#30DaysOfSWA** on May 1, then completing four themed weeks of content, leading us to this post today. Let's take a look at some highlights.
+We started this site on Apr 30 with [this post](./2022-04-30.md) announcing the **SWA Anniversary** event, before [**kicking off**](./2022-05-01.md) the **#30DaysOfSWA** on May 1, then completing four themed weeks of content. You can [**find the entire roadmap here**](/roadmap).
+
+Which leads us to this post today. Let's review some highlights from May. 
 
 ---
 
