Adding Twitter Card for Recap post

--- a/www/blog/2022-05-30.md
+++ b/www/blog/2022-05-30.md
@@ -6,6 +6,17 @@ tags: [swa, 30days]
 draft: false
 ---
 
+<head>
+  <meta name="twitter:url" content="https://www.azurestaticwebapps.dev/blog/30days-summary" />
+  <meta name="twitter:title" content="#28: Learn Azure Static Web Apps in #30DaysOfSWA" />
+  <meta name="twitter:description" content="Join us for a #30Days learning journey into @AzureStaticApps from Core Concepts and Usage Examples to DevTools and Best Practices." />
+  <meta name="twitter:image" content="https://www.azurestaticwebapps.dev/assets/images/29-banner.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:creator" content="@nitya" />
+  <meta name="twitter:site" content="@AzureStaticApps" /> 
+  <link rel="canonical" href="https://www.azurestaticwebapps.dev/blog/30days-summary" />
+</head>
+
 Hello there!!
 
 The #30DaysOfSWA series embarks us on a quick and easy journey to learn about Azure Static Web Apps - from Core Concepts to Best Practices **in just four weeks**! The content is structured in a way that allows you to jumpstart or revisit the journey at any time! Here's a summary of what is covered and what you'll learn by taking this journey with us!! And stay tuned for a follow-up post a little later, where we'll share resources and next steps you can take, to keep skilling up.🚀
