Refactoring Images: moved SVG

--- a/www/blog/2022-05-01.md
+++ b/www/blog/2022-05-01.md
@@ -86,4 +86,4 @@ Each post will identify the authors by name, and link to a relevant online profi
 
 I think that's all you need to know for now! Hope your're as excited as we are. Check back for the next post and ... **#LetsDoThis** !!
 
-![](../static/img/logo.svg)
+![](../static/img/svg/logo.svg)
