Refactoring Images: reduced roadmaps
Original images in static/orig at full size
Refactored Images in static/png at reduced size for faster load

--- a/www/blog/2022-04-30.md
+++ b/www/blog/2022-04-30.md
@@ -6,7 +6,7 @@ tags: [swa, 30days, event]
 draft: false
 ---
 
-![](../static/img/swanniversary.png)
+![](../static/img/png/swanniversary.png)
 
 :::info SWA ANNIVERSARY SCHEDULE & SPEAKERS
 View the latest Schedule & Speaker Lineup at [https://aka.ms/swaanniversary](https://aka.ms/swaanniversary)
@@ -38,7 +38,7 @@ But there's more! _Are you new to Azure Static Web Apps?_ Do you want to get a b
 
 Watch this space for an update on a new content series that will help you jumpstart that learning journey! Throughout the month of May, we'll bring together a diverse group of technologists to share short articles with resources and insights on a curated tour of Static Web Apps - taking you from **code to scale**.
 
-![The #30DaysOfSWA logo](../static/img/logo-light.png)
+![The #30DaysOfSWA logo](../static/img/png/logo-light.png)
 
 
 ## How Can You Participate?
