fix: links, collections tiles

--- a/www/blog/2022-05-09.md
+++ b/www/blog/2022-05-09.md
@@ -42,7 +42,7 @@ Astro emphasizes **fast performance** with **less JavaScript** - and takes a [pa
 ## Astro + SWA
 
 In **[today's tutorial](https://dev.to/azure/building-applications-with-astro-build-azure-static-web-apps-cli-a20)**, we walk through the steps required to:
- * create an astro-powered blog (using [this template](tttps://github.com/glaucia86/astro-swa-demo))
+ * create an astro-powered blog (using [this template](https://github.com/glaucia86/astro-swa-demo)
  * test it locally using the Azure Static Web Apps CLI (`swa`)
  * deploy it using the [Visual Studio Code Extenstion for SWA](https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-azurestaticwebapps) 
 
